compiler/tests/errortests/arithmetic-divide-string-compound.txt
FILENAME:4:26: error: Could not determine type of initial value for variable 'result'.
    let result : i32 = x / (s + "world");  // Error: cannot divide by string type
                         ^
FILENAME:4:26: error: Could not determine types of operands in binary expression.
    let result : i32 = x / (s + "world");  // Error: cannot divide by string type
                         ^
FILENAME:4:31: error: Operator '__add__' is not overloaded for struct type 'string'.
    let result : i32 = x / (s + "world");  // Error: cannot divide by string type
                              ^
